welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:12: error: not found: value i
  tableauCouleur(i)=getCouleurSol();
                 ^