welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {remplirTableau()
}

var tableauCouleur = new Array[Color](6)

def remplirTableau(){
  for (i<- 1 to 5){
    tableauCouleur(i)=getCouleurSol();
    avance();
  }
  tableauCouleur(i)=getCouleurSol();
}
